//
// Copyright 2021 DXOS.org
//

syntax = "proto3";

import "google/protobuf/timestamp.proto";

import "dxos/echo/timeframe.proto";
import "dxos/keys.proto";

package dxos.echo.metadata;

message EchoMetadata {
  /**
   * Version number that is inceremnted every time there's a breaking change to the storage schema.
   * This is used to detect if the storage schema has changed since the last time the client was run.
   * Loading data from a different version will might result in an error.
   */
  int32 version = 1;

  google.protobuf.Timestamp created = 2;
  google.protobuf.Timestamp updated = 3;

  // TODO(dmaretskyi): Store the device key associated with the identity.
  optional IdentityRecord identity = 10;

  /// List of the data spaces.
  repeated SpaceMetadata spaces = 11;
}

// TODO(dmaretskyi): Cleanup numbering.
message SpaceMetadata {
  /// Space key.
  dxos.keys.PublicKey key = 1;

  optional dxos.keys.PublicKey genesis_feed_key = 6;

  /// Key of the wriatable control feed.
  optional dxos.keys.PublicKey control_feed_key = 4;

  /// List of all feed associated with the space.
  repeated dxos.keys.PublicKey feed_keys = 2;

  /// Key of the wriatable data feed.
  optional dxos.keys.PublicKey data_feed_key = 3;


  // Latest control timeframe reached while processing space messages.
  optional timeframe.TimeframeVector control_timeframe = 8;

  // Latest data timeframe reached while processing space messages.
  optional timeframe.TimeframeVector data_timeframe = 5;

  optional string snapshot = 7;
}

/// Information needed to bootstrap an Identity.
message IdentityRecord {
  dxos.keys.PublicKey identity_key = 1;
  dxos.keys.PublicKey device_key = 2;

  SpaceMetadata halo_space = 3;

  /// Public profile information.
  /// TODO(burdon): Not yet implemented. Must be null.
  optional SpaceMetadata profile_space = 4;

  /// Cached profile.
  optional ProfileDocument profile = 5;
}
